<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/userid_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userid"
        app:layout_constraintBottom_toTopOf="@id/id_l"
        app:layout_constraintEnd_toStartOf="@id/userid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/id_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        app:layout_constraintTop_toBottomOf="@id/userid"
        app:layout_constraintBottom_toTopOf="@id/title_l"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/id" />

    <TextView
        android:id="@+id/title_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintTop_toBottomOf="@id/id"
        app:layout_constraintBottom_toTopOf="@id/body_l"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/body" />

    <TextView
        android:id="@+id/body_l"
        android:layout_width="wrap_content"
        android:layout_height="100sp"
        android:text="@string/body"
        app:layout_constraintBottom_toTopOf="@id/button_second"
        app:layout_constraintEnd_toStartOf="@id/title1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title1" />

    <TextView
        android:id="@+id/userid"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@id/id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/userid_l"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@id/title1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/id_l"
        app:layout_constraintTop_toBottomOf="@id/userid" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@id/body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/title_l"
        app:layout_constraintTop_toBottomOf="@id/id" />

    <TextView
        android:id="@+id/body"
        android:layout_width="200sp"
        android:layout_height="100sp"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/body_l"
        app:layout_constraintTop_toBottomOf="@id/title1" />


</androidx.constraintlayout.widget.ConstraintLayout>